feature: angular universal support

--- a/src/app/ui/main-nav/main-nav.component.html
+++ b/src/app/ui/main-nav/main-nav.component.html
@@ -17,6 +17,9 @@
       <a class="navbar-item" routerLink="/login">
         Login
       </a>
+      <a class="navbar-item" routerLink="/ssr">
+        SSR Universal
+      </a>
       <a class="navbar-item" routerLink="/notes">
         Firestore
       </a>
