Added passwordless login
Used:
https://github.com/AngularFirebase/94-firebase-passwordless-auth
and
https://angularfirebase.com/lessons/using-passwordless-signup-with-firebase-on-the-web/

--- a/src/app/ui/user-login/user-login.component.html
+++ b/src/app/ui/user-login/user-login.component.html
@@ -1,7 +1,7 @@
 <h1>Firebase User Auth Demo</h1>
 
 <p>
-  Learn more about 
+  Learn more about
   <a href="https://angularfirebase.com/tag/authentication">Firebase auth strategies</a>.
 </p>
 <hr>
@@ -25,6 +25,10 @@
     <button (click)="signInWithTwitter()" class="button  btn-social btn-twitter" disabled>
       <i class="fa fa-twitter fa-lg"></i> Connect Twitter
     </button>
+
+    <hr>
+
+    <passwordless-form></passwordless-form>
 
     <hr>
 
