--- a/src/app/ui/main-nav/main-nav.component.html
+++ b/src/app/ui/main-nav/main-nav.component.html
@@ -1,43 +1,30 @@
-
 <nav class="navbar" role="navigation" aria-label="main navigation">
-  <div class="navbar-brand">
-    <a class="navbar-item" routerLink="/">
-      <img src="assets/images/angularfirebase.png" width="30px" alt="Firestarter Angular4 Demo App"/> FireStarter
-    </a>
+    <div class="navbar-brand">
+        <a class="navbar-item" routerLink="/">
+            <img src="assets/images/angularfirebase.png" width="30px" alt="Firestarter Angular4 Demo App" /> FireStarter
+        </a>
 
-    <a role="button" class="navbar-burger" (click)="toggleCollapse()" [ngClass]="{'is-active': show}">
-      <span aria-hidden="true"></span>
-      <span aria-hidden="true"></span>
-      <span aria-hidden="true"></span>
-    </a>
-  </div>
+        <a id="navToggle" role="button" class="navbar-burger" (click)="toggleCollapse()" [ngClass]="{'is-active': show}">
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+            <span aria-hidden="true"></span>
+        </a>
+    </div>
 
-  <div class="navbar-menu" [ngClass]="{'is-active': show}">
-    <div class="navbar-end"  >
-      <a class="navbar-item" routerLink="/login">
+    <div class="navbar-menu" [ngClass]="{'is-active': show}">
+        <div class="navbar-end">
+            <a class="navbar-item" routerLink="/login">
         Login
       </a>
-      <a class="navbar-item" routerLink="/ssr">
+            <a class="navbar-item" routerLink="/ssr">
         SSR Universal
       </a>
-      <a class="navbar-item" routerLink="/notes">
+            <a class="navbar-item" routerLink="/notes">
         Firestore
       </a>
-      <a class="navbar-item" routerLink="/uploads">
+            <a class="navbar-item" routerLink="/uploads">
         File Uploads
       </a>
+        </div>
     </div>
-  </div>
 </nav>
-
-
-
-
-
-
-
-
-
-
-
-
