--- a/src/app/notes/notes-list/notes-list.component.html
+++ b/src/app/notes/notes-list/notes-list.component.html
@@ -1,11 +1,11 @@
 <h1>Firestore Notes</h1>
 <p>
-  Learn how to build 
-  <a href="https://angularfirebase.com/tag/firestore">cool stuff with Firestore</a>
+    Learn how to build
+    <a href="https://angularfirebase.com/tag/firestore">cool stuff with Firestore</a>
 </p>
 <hr>
 
-<input [(ngModel)]="content" placeholder="Add your own note" class="input">
+<input [(ngModel)]="content" placeholder="Add your own note" class="input" name="note">
 
 
 <button class="button is-success" (click)="clickHandler()" [disabled]="content?.length < 2 || content?.length > 200">
@@ -13,5 +13,5 @@
 </button>
 <hr>
 <div *ngFor="let note of notes | async">
-  <note-detail [note]="note"></note-detail>
+    <note-detail [note]="note"></note-detail>
 </div>
