--- a/src/app/ui/home-page/home-page.component.html
+++ b/src/app/ui/home-page/home-page.component.html
@@ -1,4 +1,4 @@
-<h1>Welcome to Firestarter!</h1>
+<h1>Welcome to Firestarter</h1>
 
 <a href="https://slackin-pbfjhfxnsa.now.sh"><img src="https://slackin-pbfjhfxnsa.now.sh/badge.svg"></a><br>
 <a href="https://circleci.com/gh/codediodeio/angular-firestarter"><img src="https://circleci.com/gh/codediodeio/angular-firestarter.svg?style=svg"></a>
