--- a/src/app/ui/main-nav/main-nav.component.html
+++ b/src/app/ui/main-nav/main-nav.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
         <a class="navbar-item" routerLink="/">
-            <img src="assets/images/angularfirebase.png" width="30px" alt="Firestarter Angular4 Demo App" /> FireStarter
+            <img src="assets/images/angularfirebase.png" width="30px" alt="Leaderboard" /> LeaderBoard
         </a>
 
         <a id="navToggle" role="button" class="navbar-burger" (click)="toggleCollapse()" [ngClass]="{'is-active': show}">
@@ -13,18 +13,12 @@
 
     <div class="navbar-menu" [ngClass]="{'is-active': show}">
         <div class="navbar-end">
-            <a class="navbar-item" routerLink="/login">
-        Login
-      </a>
-            <a class="navbar-item" routerLink="/ssr">
-        SSR Universal
-      </a>
             <a class="navbar-item" routerLink="/notes">
-        Firestore
-      </a>
+                Firestore
+            </a>
             <a class="navbar-item" routerLink="/uploads">
-        File Uploads
-      </a>
+                File Uploads
+            </a>
         </div>
     </div>
 </nav>
