--- a/src/app/ui/main-nav/main-nav.component.html
+++ b/src/app/ui/main-nav/main-nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar" role="navigation" aria-label="main navigation">
+<!-- <nav class="navbar" role="navigation" aria-label="main navigation">
     <div class="navbar-brand">
         <a class="navbar-item" routerLink="/">
             <img src="assets/images/angularfirebase.png" width="30px" alt="Leaderboard" /> LeaderBoard
@@ -21,4 +21,36 @@
             </a>
         </div>
     </div>
-</nav>
+</nav> -->
+<!-- <mat-toolbar color="primary">
+  <mat-toolbar-row>
+    <a class="navbar-item" routerLink="/">
+      <img src="assets/images/angularfirebase.png" width="30px" alt="Leaderboard" /> LeaderBoard
+    </a>
+    <span class="example-spacer"></span>
+    <a class="navbar-item" routerLink="/notes">
+      <mat-icon class="example-icon">note</mat-icon>
+    </a>
+    <a class="navbar-item" routerLink="/uploads">
+      <mat-icon class="example-icon">attach_file</mat-icon>
+    </a>
+  </mat-toolbar-row>
+</mat-toolbar> -->
+<mat-toolbar color="primary">
+  <mat-toolbar-row>
+    <span>Custom Toolbar</span>
+  </mat-toolbar-row>
+
+  <mat-toolbar-row>
+    <span>Second Line</span>
+    <span class="example-spacer"></span>
+    <mat-icon class="example-icon">verified_user</mat-icon>
+  </mat-toolbar-row>
+
+  <mat-toolbar-row>
+    <span>Third Line</span>
+    <span class="example-spacer"></span>
+    <mat-icon class="example-icon">favorite</mat-icon>
+    <mat-icon class="example-icon">delete</mat-icon>
+  </mat-toolbar-row>
+</mat-toolbar>
