--- a/src/app/ui/main-nav/main-nav.component.html
+++ b/src/app/ui/main-nav/main-nav.component.html
@@ -1,15 +1,16 @@
 
 <mat-toolbar color="primary">
   <mat-toolbar-row>
-    <a routerLink="/">
-      <img src="assets/images/angularfirebase.png" width="30px" alt="Leaderboard" /> LeaderBoard
+    <a mat-button routerLink="/">
+      <mat-icon class="example-icon">school</mat-icon>
+      LeaderBoard
     </a>
     <span class="example-spacer"></span>
-    <a routerLink="/notes">
+    <a mat-button routerLink="/notes">
       <mat-icon class="example-icon">note</mat-icon>
       Notes
     </a>
-    <a routerLink="/uploads">
+    <a mat-button routerLink="/uploads">
       <mat-icon class="example-icon">attach_file</mat-icon>
       File Upload
     </a>
