--- a/src/app/ui/main-nav/main-nav.component.scss
+++ b/src/app/ui/main-nav/main-nav.component.scss
@@ -1,13 +1,7 @@
-nav {
-    border-bottom: 1px solid #E4E4E4;
-    box-shadow: 0 0 4px rgba(0, 0, 0, .1), 0 2px 4px rgba(0, 0, 0, 0.1);
-    margin-bottom: 25px;
+.example-icon {
+  padding: 0 14px;
 }
 
-.navbar-brand {
-    padding: 0 3em 0 2em;
-}
-
-.navbar-menu {
-    padding-right: 3em;
+.example-spacer {
+  flex: 1 1 auto;
 }
