--- a/src/styles.scss
+++ b/src/styles.scss
@@ -23,11 +23,6 @@
 // $heading-font: 'Palanquin',
 // sans-serif;
 
-// body {
-//     font-family: $body-font;
-//     // padding: 0 1vw;
-// }
-
 // h1,
 // h2,
 // h3,
@@ -61,8 +56,14 @@ app-root:empty+.loading {
     }
 }
 
-// .button {
-//     margin-right: 5px;
-// }
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-content: stretch;
+    align-items: stretch;
+    height: 100vh;
+}
