added teams and tasks view

--- a/src/app/ui/main-nav/main-nav.component.html
+++ b/src/app/ui/main-nav/main-nav.component.html
@@ -6,9 +6,9 @@
       LeaderBoard
     </a>
     <span class="example-spacer"></span>
-    <a mat-button routerLink="/notes">
-      <mat-icon class="example-icon">note</mat-icon>
-      Notes
+    <a mat-button routerLink="/tasks">
+      <mat-icon class="example-icon">ballot</mat-icon>
+      My Tasks
     </a>
     <a mat-button routerLink="/uploads">
       <mat-icon class="example-icon">attach_file</mat-icon>
