--- a/src/app/tasks/tasks-page.component.html
+++ b/src/app/tasks/tasks-page.component.html
@@ -20,7 +20,7 @@
 
   <div *ngIf="user.team">
     <mat-label>
-      <b>Team:</b>
+      <b>Team Name:</b>
       <mat-icon>group</mat-icon>
       {{user.team.name}}
     </mat-label>
