--- a/src/app/ui/home-page/home-page.component.html
+++ b/src/app/ui/home-page/home-page.component.html
@@ -1,4 +1,4 @@
-<h1>Welcome to Leaderboard</h1>
+<h2>Welcome to LeaderBoard</h2>
 
 <p>
   Leaderboard placeholder. TODO: Add main leaderboard here.
