--- a/src/app/ui/notification-message/notification-message.component.html
+++ b/src/app/ui/notification-message/notification-message.component.html
@@ -1,9 +1,11 @@
-<mat-chip-list *ngIf="notify.msg | async as msg">
-  <mat-chip selected
-    [removable]="true"
-    color="{{getColor(msg.style)}}"
-    (removed)="notify.clear()">
-    {{ msg.content }}
-    <mat-icon matChipRemove>cancel</mat-icon>
-  </mat-chip>
-</mat-chip-list>
+<div class="notification">
+  <mat-chip-list *ngIf="notify.msg | async as msg">
+    <mat-chip selected
+      [removable]="true"
+      color="{{getColor(msg.style)}}"
+      (removed)="notify.clear()">
+      {{ msg.content }}
+      <mat-icon matChipRemove>cancel</mat-icon>
+    </mat-chip>
+  </mat-chip-list>
+</div>
